[tool.poetry]
name = "nas-without-training"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "=3.7"
torchvision = "0.7.0"
torch = "1.6.0"
scipy = "1.4.1"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
xlrd = "^2.0.1"
pip = "^21.2.4"
scikit-learn = "^0.24.2"
scikit-image = "^0.18.3"
tqdm = "^4.62.2"
yacs = "^0.1.8"
simplejson = "^3.17.5"
nasbench = {git = "https://github.com/google-research/nasbench"}
tensorflow-gpu = "1.15.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
